"/Java_sources/Configuration_Master/utility_class.java": more work on the portability-related helper code, again⁶